<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.5.6</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>org.telegram</groupId>
    <artifactId>telegrambots-declarative-spring-boot-starter</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <name>Declarative Telegram Bot</name>
    <url>https://github.com/aliaksandrrachko/telegrambots-declarative-spring-boot-starter</url>
    <description>A simple-to-use spring boot starter to create Telegram Bots in Java</description>

    <issueManagement>
        <url>https://github.com/aliaksandrrachko/telegrambots-declarative-spring-boot-starter/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>

    <scm>
        <url>https://github.com/aliaksandrrachko/telegrambots-declarative-spring-boot-starter.git</url>
        <connection>scm:git:git://github.com/aliaksandrrachko/telegrambots-declarative-spring-boot-starter.git</connection>
        <developerConnection>scm:git:git@github.com:aliaksandrrachko/telegrambots-declarative-spring-boot-starter.git</developerConnection>
    </scm>

    <developers>
        <developer>
            <email>rachko.a.ch@gmail.com</email>
            <name>Ales' Rachko</name>
            <url>https://github.com/aliaksandrrachko</url>
            <id>aliaksandrrachko</id>
        </developer>
    </developers>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <properties>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
        <org.projectlombok.version>1.18.20</org.projectlombok.version>
        <telegramboots.spring.boot.starter.version>5.3.0</telegramboots.spring.boot.starter.version>
        <org.apache.commons.version>3.7</org.apache.commons.version>
        <com.google.guava.version>31.0.1-jre</com.google.guava.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.telegram</groupId>
            <artifactId>telegrambots-spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.telegram</groupId>
                <artifactId>telegrambots-spring-boot-starter</artifactId>
                <version>${telegramboots.spring.boot.starter.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${org.apache.commons.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <optional>true</optional>
                <version>${org.projectlombok.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${com.google.guava.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>